--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "devDependencies": {
     "@types/node": "^20.14.9",
     "elm-codegen": "^0.5.3",
+    "elm-format": "^0.8.7",
     "typescript": "^5.5.3"
   },
   "dependencies": {
